# mcp-playground

./: .gitignore  README.md  mlops_server.py  pyproject.toml  test.py
airflow_as_mcp/: docker-compose.yaml
airflow_as_mcp/dags/: reflection_dag.py
