[project]
name = "mcp-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastmcp>=2.14.3",
    "langchain>=1.2.6",
    "langchain-google-genai>=4.2.0",
    "mcp[cli]>=1.25.0",
    "pydantic>=2.12.5",
    "pymongo[srv]>=4.16.0",
]
